# EcoVision

./: .dockerignore  .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.dvc/: config  config.local.example
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml
docs/: README.md
dvc-files/: 20251007v1.dvc  dvc.txt
runs/EcoVision/: args.yaml  results.csv
src/data/: camera.py  load_model.py  processing.py  register.py  train.py
tests/: test_load_model.py  test_processing.py
